Added more to jumbotron, fixed media.

--- a/index.html
+++ b/index.html
@@ -38,32 +38,43 @@
       </a>
         <li><a href="#">About</a></li>
         <li><a href="#">Resume</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="https://medium.com/@jasonchiu">Blog</a></li>
         <li><a href="#">Projects</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="jumbotron">
+<div class="jumbotron center90">
   <h1>I'm Jason!</h1>
-  <p>This is my new site.</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Yes!</a></p>
-</div>
+  <p>
+  I major in Computer Game Science, specializing in software development.<br><br>
+I'm an inquisitive scholar by nature and a humble listener by practice.<br>
+I attend the University of California, Irvine.<br><br>
+</p>
 
 
-<div class="media">
-  <a class="media-left" href="#">
-    <img src="images/jaycrop" alt="...">
-  </a>
-  <div class="media-body">
-    <h4 class="media-heading">This is what I do!</h4>
-    <p> Testing! </p>
+<div class="well well-sm"> 
+    Check out my resume below:
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Resume PDF:</a></p>
   </div>
 </div>
 
 
-<div class="well well-sm"> Small well - Resume? </div>
+<ul class="media-list">
+  <li class="media">
+    <a class="media-left" href="">
+      <img id="headerImg" src="/images/jaycrop.jpg" alt="...">
+    </a>
+    <div class="media-body">
+      <h4 class="media-heading">Heading</h4>
+      <p> Sample </p>
+    </div>
+  </li>
+</ul>
+
+
+
 
 
 <p> Sample text </p>
