--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
   </div>
 </nav>
 
+<div class="progress">
+  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+    <span class="sr-only">100% Complete</span>
+  </div>
+</div>
+
+
 <div class="jumbotron center90">
   <h1>I'm Jason!</h1>
   <p>
@@ -61,17 +68,6 @@ I attend the University of California, Irvine.<br><br>
 </div>
 
 
-<ul class="media-list">
-  <li class="media">
-    <a class="media-left" href="">
-      <img id="headerImg" src="/images/jaycrop.jpg" alt="...">
-    </a>
-    <div class="media-body">
-      <h4 class="media-heading">Heading</h4>
-      <p> Sample </p>
-    </div>
-  </li>
-</ul>
 
 
 
