Added a project section, some placeholder images.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 
 
 <div class="jumbotron center90">
+  <div class="container">
+<img src="jaydom.jpg" alt="..." class="img-circle">
+</div>
+
   <h1>I'm Jason!</h1>
   <p>
   I major in Computer Game Science, specializing in software development.<br><br>
@@ -61,10 +65,37 @@ I attend the University of California, Irvine.<br><br>
 </p>
 
 
-<div class="well well-sm"> 
-    Check out my resume below:
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Resume PDF:</a></p>
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img data-src="Potate.jpg" alt="...">
+        <div class="caption">
+          <h3>HackUCI</h3>
+          <p>...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
+        </div>
+    </a>
   </div>
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img data-src="Potate.jpg" alt="...">
+        <div class="caption">
+          <h3>HackUCI</h3>
+          <p>...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
+        </div>
+    </a>
+  </div>
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img data-src="Potate.jpg" alt="...">
+        <div class="caption">
+          <h3>HackUCI</h3>
+          <p>...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
+        </div>
+    </a>
+</div>
 </div>
 
 
@@ -73,7 +104,21 @@ I attend the University of California, Irvine.<br><br>
 
 
 
-<p> Sample text </p>
+
+<div class="well well-sm"> 
+
+<dl> <!-- Description Lists -->
+  <dt> Get my resume below: </dt>
+  <dd><a class="btn btn-primary btn-lg" href="#" role="button">Resume PDF:</a> </dd>
+</dl>
+
+
+  </div>
+</div>
+
+
+
+
 
 
 </body>
