Added lots of content (check desc)
- Placeholder images fixed
- Added icalendar to see how it looks
- Updated first paragraph content

--- a/index.html
+++ b/index.html
@@ -45,60 +45,74 @@
   </div>
 </nav>
 
-<div class="progress">
-  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-    <span class="sr-only">100% Complete</span>
-  </div>
-</div>
-
 
 <div class="jumbotron center90">
   <div class="container">
-<img src="jaydom.jpg" alt="..." class="img-circle">
+<img src="images/jaydom.jpg" alt="..." class="img-circle">
 </div>
 
   <h1>I'm Jason!</h1>
+
+<div class="well well-sm"> 
+
   <p>
-  I major in Computer Game Science, specializing in software development.<br><br>
-I'm an inquisitive scholar by nature and a humble listener by practice.<br>
-I attend the University of California, Irvine.<br><br>
+  I major in Computer Game Science, specializing in software development!<br>
+  I'm currently in my 3rd year at the University of California, Irvine.<br><br>
+  My passions? <br>
+  Game development. Hackathons. Organizing events. <br>
+  I like to make things happen, and I like to enable others to realize that they can, too. <br><br>
+In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br>
+
 </p>
 
+</div>
+
+ <div class="container">
+<iframe src="https://www.google.com/calendar/embed?src=jchiu5%40uci.edu&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
+
+
+ <h1>Some of the stuff I do!</h1>
+ <h2>Hit each button to see more.</h2>
+
+
+
+<div class="well well-sm"> 
 
 <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img data-src="Potate.jpg" alt="...">
+      <img data-src="images/Potate.jpg" alt="...">
         <div class="caption">
           <h3>HackUCI</h3>
-          <p>...</p>
+          <p> [PLACEHOLDER] </p>
           <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
         </div>
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img data-src="Potate.jpg" alt="...">
+      <img data-src="images/Potate.jpg" alt="...">
         <div class="caption">
-          <h3>HackUCI</h3>
-          <p>...</p>
+          <h3>VGDC</h3>
+          <p>[PLACEHOLDER]</p>
           <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
         </div>
     </a>
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img data-src="Potate.jpg" alt="...">
+      <img data-src="images/Potate.jpg" alt="...">
         <div class="caption">
-          <h3>HackUCI</h3>
-          <p>...</p>
+          <h3>ReadyForce</h3>
+          <p>[PLACEHOLDER]</p>
           <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
         </div>
     </a>
 </div>
 </div>
 
-
+</div>
 
 
 
