Fixed more placeholder images.
Added colunmns to top.

--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
 
 
 <div class="jumbotron center90">
-  <div class="container">
+
 <img src="images/jaydom.jpg" alt="..." class="img-circle">
-</div>
+
+
+<div class="row">
+  <div class="col-xs-12 col-md-6">
 
   <h1>I'm Jason!</h1>
 
@@ -66,10 +69,22 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
 </p>
 
 </div>
-
- <div class="container">
-<iframe src="https://www.google.com/calendar/embed?src=jchiu5%40uci.edu&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
+
+<div class="col-xs-12 col-md-6">
+<a href="#" class="thumbnail">
+      <img data-src="images/Potate.jpg" alt="...">
+        <div class="caption">
+          <h3>Yes!</h3>
+          <p>[PLACEHOLDER]</p>
+        </div>
+    </a>
+
+
+</div>
+
+
+<iframe src="https://www.google.com/calendar/embed?src=jchiu5%40uci.edu&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
  <h1>Some of the stuff I do!</h1>
