--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <div class="jumbotron center90">
-
+<br>
 <img src="images/jaydom.jpg" alt="..." class="img-circle">
 
 
@@ -59,11 +59,12 @@
 <div class="well well-sm"> 
 
   <p>
-  I major in Computer Game Science, specializing in software development!<br>
+  I major in <i>Computer Game Science</i>, specializing in software development!<br>
   I'm currently in my 3rd year at the University of California, Irvine.<br><br>
-  My passions? <br>
-  Game development. Hackathons. Organizing events. <br>
-  I like to make things happen, and I like to enable others to realize that they can, too. <br><br>
+  My passions? <br><br>
+  Game development. Hackathons. Bettering myself and others.<br><br>
+  <b><u>I like to make things happen.</u></b><br> 
+  I like to enable others to realize that they can, too. <br><br>
 In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br>
 
 </p>
@@ -73,18 +74,21 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
 
 <div class="col-xs-12 col-md-6">
 <a href="#" class="thumbnail">
-      <img data-src="images/Potate.jpg" alt="...">
+      <img src="images/Potate.jpg" alt="...">
         <div class="caption">
-          <h3>Yes!</h3>
-          <p>[PLACEHOLDER]</p>
+          <h3>What am I currently up to?</h3>
+  <ul class="list-group">
+  <li class="list-group-item-heading">Project Blood  <p class="list-group-item-text">testing!</p></li>
+  <li class="list-group-item-heading">Project FoodRun</li>
+  <li class="list-group-item-heading">Painbuddy</li>
+</ul>
         </div>
     </a>
 
 
 </div>
+</div>
 
-
-<iframe src="https://www.google.com/calendar/embed?src=jchiu5%40uci.edu&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
  <h1>Some of the stuff I do!</h1>
@@ -97,7 +101,7 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
 <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img data-src="images/Potate.jpg" alt="...">
+      <img src="images/Potate.jpg" alt="...">
         <div class="caption">
           <h3>HackUCI</h3>
           <p> [PLACEHOLDER] </p>
@@ -107,7 +111,7 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img data-src="images/Potate.jpg" alt="...">
+      <img src="images/Potate.jpg" alt="...">
         <div class="caption">
           <h3>VGDC</h3>
           <p>[PLACEHOLDER]</p>
@@ -117,7 +121,7 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img data-src="images/Potate.jpg" alt="...">
+      <img src="images/Potate.jpg" alt="...">
         <div class="caption">
           <h3>ReadyForce</h3>
           <p>[PLACEHOLDER]</p>
