Fixing the bottom project displays.

--- a/index.html
+++ b/index.html
@@ -77,14 +77,24 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
       <img src="images/Potate.jpg" alt="...">
         <div class="caption">
           <h3>What am I currently up to?</h3>
-  <ul class="list-group">
-  <li class="list-group-item-heading">Project Blood  <p class="list-group-item-text">testing!</p></li>
-  <li class="list-group-item-heading">Project FoodRun</li>
-  <li class="list-group-item-heading">Painbuddy</li>
-</ul>
-        </div>
+            </div>
     </a>
 
+ <div class="list-group">
+  <a href="#" class="list-group-item active">
+    <h4 class="list-group-item-heading">Project: Blood</h4>
+    <p class="list-group-item-text">[Placeholder]</p>
+  </a>
+  <a href="#" class="list-group-item active">
+    <h4 class="list-group-item-heading">Project: FoodRun</h4>
+    <p class="list-group-item-text">[Placeholder]</p>
+  </a>
+  <a href="#" class="list-group-item active">
+    <h4 class="list-group-item-heading">Project: PainBuddy</h4>
+    <p class="list-group-item-text">[Placeholder]</p>
+  </a>
+</div>
+      
 
 </div>
 </div>
@@ -102,33 +112,39 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
       <img src="images/Potate.jpg" alt="...">
+          </a>
         <div class="caption">
           <h3>HackUCI</h3>
           <p> [PLACEHOLDER] </p>
-          <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
+           <a href="#" class="btn btn-primary" role="button">Check it out!</a>
         </div>
-    </a>
+  </div>
+<div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="images/Potate.jpg" alt="...">
+          </a>
+        <div class="caption">
+          <h3>HackUCI</h3>
+          <p> [PLACEHOLDER] </p>
+           <a href="#" class="btn btn-primary" role="button">Check it out!</a>
+        </div>
+
   </div>
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
       <img src="images/Potate.jpg" alt="...">
+          </a>
         <div class="caption">
-          <h3>VGDC</h3>
-          <p>[PLACEHOLDER]</p>
-          <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
+          <h3>HackUCI</h3>
+          <p> [PLACEHOLDER] </p>
+           <a href="#" class="btn btn-primary" role="button">Check it out!</a>
         </div>
-    </a>
+
   </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="images/Potate.jpg" alt="...">
-        <div class="caption">
-          <h3>ReadyForce</h3>
-          <p>[PLACEHOLDER]</p>
-          <p><a href="#" class="btn btn-primary" role="button">Check it out!</a></p>
-        </div>
-    </a>
-</div>
+  
+
+
+  
 </div>
 
 </div>
