--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
 </nav>
 
 
+<div class="row">
+  <div class="col-xs-12 col-md-6">
+
 <div class="jumbotron center90">
 <br>
 <img src="images/jaydom.jpg" alt="..." class="img-circle">
-
-
-<div class="row">
-  <div class="col-xs-12 col-md-6">
 
   <h1>I'm Jason!</h1>
 
@@ -81,15 +80,20 @@ In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone 
     </a>
 
  <div class="list-group">
-  <a href="#" class="list-group-item active">
+  <a href="#" class="list-group-item">
     <h4 class="list-group-item-heading">Project: Blood</h4>
     <p class="list-group-item-text">[Placeholder]</p>
+    <div class="progress">
+  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    60%
+  </div>
+</div>
   </a>
-  <a href="#" class="list-group-item active">
+  <a href="#" class="list-group-item">
     <h4 class="list-group-item-heading">Project: FoodRun</h4>
     <p class="list-group-item-text">[Placeholder]</p>
   </a>
-  <a href="#" class="list-group-item active">
+  <a href="#" class="list-group-item ">
     <h4 class="list-group-item-heading">Project: PainBuddy</h4>
     <p class="list-group-item-text">[Placeholder]</p>
   </a>
