--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     <div class="navbar-header">
        <ul class="nav navbar-nav">
        <a class="navbar-brand" href="#">
-        <img id="headerImg" alt="Brand" src="images/omu.jpg">
-      </a>
+        <img id="headerImg" alt="Brand" src="images/omu.jpg"></a>
         <li><a href="#">About</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="https://medium.com/@jasonchiu">Blog</a></li>
@@ -46,61 +45,46 @@
 </nav>
 
 
-<div class="row">
-  <div class="col-xs-12 col-md-6">
+<div class="jumbotron center90"><br>
+  <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <img src="images/jaydom.jpg" alt="..." class="img-circle">
+      <h1>I'm Jason!</h1>
+      <div class="well well-sm">
+        <p>I major in <i>Computer Game Science</i>, specializing in software development!<br>
+        I'm currently in my 3rd year at the University of California, Irvine.<br><br>
+        My passions? <br><br> Game development. Hackathons. Bettering myself and others.<br><br>
+        <b><u>I like to make things happen.</u></b><br> I like to enable others to realize that they can, too. <br><br>
+        In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br></p>
+      </div>
+    </div>
 
-<div class="jumbotron center90">
-<br>
-<img src="images/jaydom.jpg" alt="..." class="img-circle">
-
-  <h1>I'm Jason!</h1>
-
-<div class="well well-sm"> 
-
-  <p>
-  I major in <i>Computer Game Science</i>, specializing in software development!<br>
-  I'm currently in my 3rd year at the University of California, Irvine.<br><br>
-  My passions? <br><br>
-  Game development. Hackathons. Bettering myself and others.<br><br>
-  <b><u>I like to make things happen.</u></b><br> 
-  I like to enable others to realize that they can, too. <br><br>
-In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br>
-
-</p>
-
-</div>
-</div>
-
-<div class="col-xs-12 col-md-6">
-<a href="#" class="thumbnail">
-      <img src="images/Potate.jpg" alt="...">
-        <div class="caption">
-          <h3>What am I currently up to?</h3>
-            </div>
-    </a>
-
- <div class="list-group">
-  <a href="#" class="list-group-item">
-    <h4 class="list-group-item-heading">Project: Blood</h4>
-    <p class="list-group-item-text">[Placeholder]</p>
-    <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-    60%
+    <div class="col-xs-12 col-md-6">
+      <a href="#" class="thumbnail"><img src="images/Potate.jpg" alt="...">
+      <div class="caption">
+        <h3>What am I currently up to?</h3>
+      </div>
+      </a>
+     <div class="list-group">
+      <a href="#" class="list-group-item">
+        <h4 class="list-group-item-heading">Project: Blood</h4>
+        <p class="list-group-item-text">[Placeholder]</p>
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" 
+          aria-valuemax="100" style="width: 60%;">
+            60%</div>
+        </div>
+      </a>
+      <a href="#" class="list-group-item">
+        <h4 class="list-group-item-heading">Project: FoodRun</h4>
+        <p class="list-group-item-text">[Placeholder]</p>
+      </a>
+      <a href="#" class="list-group-item ">
+        <h4 class="list-group-item-heading">Project: PainBuddy</h4>
+        <p class="list-group-item-text">[Placeholder]</p>
+      </a>
+    </div>
   </div>
-</div>
-  </a>
-  <a href="#" class="list-group-item">
-    <h4 class="list-group-item-heading">Project: FoodRun</h4>
-    <p class="list-group-item-text">[Placeholder]</p>
-  </a>
-  <a href="#" class="list-group-item ">
-    <h4 class="list-group-item-heading">Project: PainBuddy</h4>
-    <p class="list-group-item-text">[Placeholder]</p>
-  </a>
-</div>
-      
-
-</div>
 </div>
 
 
