--- a/index.html
+++ b/index.html
@@ -50,27 +50,24 @@
     <div class="col-xs-12 col-md-6">
       <img src="images/jaydom.jpg" alt="..." class="img-circle">
       <h1>I'm Jason!</h1>
-      <div class="well well-sm">
         <p>I major in <i>Computer Game Science</i>, specializing in software development!<br>
         I'm currently in my 3rd year at the University of California, Irvine.<br><br>
         My passions? <br><br> Game development. Hackathons. Bettering myself and others.<br><br>
         <b><u>I like to make things happen.</u></b><br> I like to enable others to realize that they can, too. <br><br>
         In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br></p>
-      </div>
     </div>
 
     <div class="col-xs-12 col-md-6">
       <a href="#" class="thumbnail"><img src="images/walker.jpg" alt="...">
-      <div class="caption">
-        <h3>I'm working on:</h3>
-      </div>
       </a>
      <div class="list-group"><!-- Begin of list group -->
 
+         <h3>I'm working on:</h3>
+     
       <a href="#" class="list-group-item ">
         <h4 class="list-group-item-heading">This Website!</h4>
         <p class="list-group-item-text">
-          Replaced old text-site with properly formatted images and projects just for you. 
+          Replaced old text-site with beautiful images and projects just for you. 
 
 
         </p>
