Updated text to be more small window-mobile friendly

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 
 <div class="jumbotron center90"><br>
-  <div class="row">
+  <div id="centerSmall" class="row">
+    
     <div class="col-xs-12 col-md-6">
       <img src="images/jaydom.jpg" alt="..." class="img-circle">
       <h1>I'm Jason!</h1>
@@ -55,7 +56,13 @@
         My passions? <br><br> Game development. Hackathons. Bettering myself and others.<br><br>
         <b><u>I like to make things happen.</u></b><br> I like to enable others to realize that they can, too. <br><br>
         In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br></p>
-    </div>
+
+        <div class="well well-sm"> 
+          <a class="btn btn-primary btn-lg" href="#" role="button">Resume (PDF)</a>
+        </div>
+  </div>
+
+
 
     <div class="col-xs-12 col-md-6">
       <a href="#" class="thumbnail"><img src="images/walker.jpg" alt="...">
@@ -63,7 +70,7 @@
      <div class="list-group"><!-- Begin of list group -->
 
          <h3>I'm working on:</h3>
-     
+
       <a href="#" class="list-group-item ">
         <h4 class="list-group-item-heading">This Website!</h4>
         <p class="list-group-item-text">
@@ -114,8 +121,8 @@
       </a>
 
     </div> <!-- End of list group -->
-  </div>
-</div>
+  </div> <!-- End of right side div -->
+</div><!-- End of this row --> 
 
 
 
@@ -172,15 +179,7 @@
 
 
 
-<div class="well well-sm"> 
 
-<dl> <!-- Description Lists -->
-  <dt> Get my resume below: </dt>
-  <dd><a class="btn btn-primary btn-lg" href="#" role="button">Resume PDF:</a> </dd>
-</dl>
-
-
-  </div>
 </div>
 
 
