--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 
 
 <div class="jumbotron center90"><br>
-  <div id="centerSmall" class="row">
+  <div class="row">
     
     <div class="col-xs-12 col-md-6">
       <img src="images/jaydom.jpg" alt="..." class="img-circle">
-      <h1>I'm Jason!</h1>
-        <p>I major in <i>Computer Game Science</i>, specializing in software development!<br>
+      <h1 id="centerSmall">I'm Jason!</h1>
+        <p id="centerSmall">I major in <i>Computer Game Science</i>, specializing in software development!<br>
         I'm currently in my 3rd year at the University of California, Irvine.<br><br>
         My passions? <br><br> Game development. Hackathons. Bettering myself and others.<br><br>
         <b><u>I like to make things happen.</u></b><br> I like to enable others to realize that they can, too. <br><br>
         In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br></p>
 
         <div class="well well-sm"> 
-          <a class="btn btn-primary btn-lg" href="#" role="button">Resume (PDF)</a>
+          <a class="btn btn-primary btn-block btn-lg" href="#" role="button" style="width:100%" >Resume (PDF)</a>
         </div>
   </div>
 
@@ -69,7 +69,7 @@
       </a>
      <div class="list-group"><!-- Begin of list group -->
 
-         <h3>I'm working on:</h3>
+         <h3>I'm working on.. <span class="badge">4</span></h3>
 
       <a href="#" class="list-group-item ">
         <h4 class="list-group-item-heading">This Website!</h4>
@@ -134,7 +134,7 @@
 <div class="well well-sm"> 
 
 <div class="row">
-  <div class="col-xs-6 col-md-3">
+  <div class="col-xs-12 col-md-3">
     <a href="#" class="thumbnail">
       <img src="images/hackLogo.jpg" alt="...">
           </a>
@@ -144,7 +144,7 @@
            
         </div>
   </div>
-<div class="col-xs-6 col-md-3">
+<div class="col-xs-12 col-md-3">
     <a href="#" class="thumbnail">
       <img src="images/vgdc.jpg" alt="...">
           </a>
@@ -155,7 +155,7 @@
         </div>
 
   </div>
-  <div class="col-xs-6 col-md-3">
+  <div class="col-xs-12 col-md-3">
     <a href="#" class="thumbnail">
       <img src="images/moreready.jpg" alt="...">
           </a>
