--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="row">
     
     <div class="col-xs-12 col-md-6">
-      <img src="images/jaydom.jpg" alt="..." class="img-circle">
+      <img id="elementSmall" src="images/jaydom.jpg" alt="..." class="img-circle">
       <h1 id="centerSmall">I'm Jason!</h1>
         <p id="centerSmall">I major in <i>Computer Game Science</i>, specializing in software development!<br>
         I'm currently in my 3rd year at the University of California, Irvine.<br><br>
