--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   <div class="container-fluid">
     <div class="navbar-header">
        <ul class="nav navbar-nav">
-       <a class="navbar-brand" href="#">
-        <img id="headerImg" alt="Brand" src="images/omu.jpg"></a>
+       <li><a class="navbar-brand" href="#">
+        <img id="headerImg" alt="Brand" src="images/omu.jpg"></a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Resume</a></li>
-        <li><a href="medium.com/@jasonchiu">Blog</a></li>
+        <li><a href="http://medium.com/@jasonchiu">Blog</a></li>
         <li><a href="#">Projects</a></li>
       </ul>
     </div>
@@ -108,10 +108,7 @@
 
       <a href="#" class="list-group-item ">
         <h4 class="list-group-item-heading">Project: PainBuddy</h4>
-        <p class="list-group-item-text">
-          
-
-
+        <p class="list-group-item-text">A survey designed as a game application and developed for patients at the Children's Hospital, Orange County.
         </p>
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" 
