--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <div class="navbar-header">
        <ul class="nav navbar-nav">
        <li><a class="navbar-brand" href="#">
-        <img id="headerImg" alt="Brand" src="images/omu.jpg"></a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="http://medium.com/@jasonchiu">Blog</a></li>
-        <li><a href="#">Projects</a></li>
+        <img style="width:100%" id="headerImg" alt="Brand" src="images/omu.jpg"></a></li>
+        <li><a class="navSpec" href="#">About</a></li>
+        <li><a class="navSpec" href="#">Resume</a></li>
+        <li><a class="navSpec" href="http://medium.com/@jasonchiu">Blog</a></li>
+        <li><a class="navSpec" href="#">Projects</a></li>
       </ul>
     </div>
   </div>
