Changing it to hidden and removing excess

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     <div class="navbar-header">
        <ul class="nav navbar-nav">
        <li><a class="navbar-brand" href="#">
-        <img style="width:100%" id="headerImg" alt="Brand" src="images/omu.jpg"></a></li>
-        <li><a class="navSpec" href="#"></a></li> <!-- attempting to trick -->
+        <img class="hidden" alt="Brand" src="images/omu.jpg"></a></li>
         <li><a class="navSpec" href="#">About</a></li>
         <li><a class="navSpec" href="#">Resume</a></li>
         <li><a class="navSpec" href="http://medium.com/@jasonchiu">Blog</a></li>
