--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        <li><a class="navbar-brand" href="#">
         <img class="hidden" alt="Brand" src="images/omu.jpg"></a></li>
         <li><a class="navSpec" href="#">About</a></li>
-        <li><a class="navSpec" href="#">Resume</a></li>
+        <li><a class="navSpec" href="#resume">Resume</a></li>
         <li><a class="navSpec" href="http://medium.com/@jasonchiu">Blog</a></li>
         <li><a class="navSpec" href="#">Projects</a></li>
       </ul>
@@ -58,7 +58,7 @@
         In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br></p>
 
         <div class="well well-sm"> 
-          <a class="btn btn-primary btn-block btn-lg" href="#" role="button" style="width:100%" >Resume (PDF)</a>
+          <a id="resume" class="btn btn-primary btn-block btn-lg" href="resume.pdf" role="button" style="width:100%" >Resume (PDF)</a>
         </div>
   </div>
 
