Trying a fun thing with wells on the projects.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div> 
    </div>
    <div class="row">
-    <div class="well well-sm" style="width:50%"> 
-      <a id="resume" class="btn btn-primary btn-block btn-lg" href="resume.pdf" role="button" style="width:50%" >Resume (PDF)</a>
+    <div id="resume" class="well well-sm" style="width:50%"> 
+      <a id="resume" class="btn btn-primary btn-block btn-lg" href="resume.pdf" role="button" style="width:80%" >Resume (PDF)</a>
     </div>
   </div>
 
@@ -138,13 +138,14 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-3">
+  <div class="well well-sm"> 
     <a href="#" class="thumbnail">
       <img src="images/hackLogo.jpg" alt="...">
           </a>
         <div class="caption">
           <h3>Project: Blood</h3>
           <p> I was one of the organizers for UCI's hackathon held for the first time ever - 300+ students for a 36 hour long coding event! </p>
-           
+           </div>
         </div>
   </div>
 <div class="col-xs-12 col-md-3">
