Fixed the scripts

--- a/index.html
+++ b/index.html
@@ -275,10 +275,7 @@
 
 </div>
 
-
-
-
-</body>
+<script> 
 
 $(document).ready(function () {
     $('#g1-trigger').click(function () {
@@ -295,3 +292,7 @@ $(document).ready(function () {
         $('#g2-box').fadeIn('slow');
     });
 });
+
+</script>
+</body>
+
