--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
  <div class="well well-sm"> 
 
 <div class="row">
-  <div class="col-xs-12 col-md-3">
+  <div id="g1-trigger" class="col-xs-12 col-md-3">
     <a href="#" class="thumbnail">
-      <img id="g1-trigger" src="images/hackLogo.jpg" alt="...">
+      <img src="images/hackLogo.jpg" alt="...">
           </a>
         <div class="caption">
           <h3>Project: Blood</h3>
           <p> [PLACEHOLDER] </p>
            </div>
   </div>
-<div class="col-xs-12 col-md-3">
+<div id="g2-trigger" class="col-xs-12 col-md-3">
     <a href="#" class="thumbnail">
-      <img id="g2-trigger" src="images/vgdc.jpg" alt="...">
+      <img src="images/vgdc.jpg" alt="...">
           </a>
         <div class="caption">
           <h3>Project: Food Run</h3>
