--- a/index.html
+++ b/index.html
@@ -180,12 +180,13 @@
   </div>
 </div>
 
-
+<div class="row">
 <div id="g1-box" class="hide">
     <p>I'm yellow</p>
 </div>
 <div id="g2-box" class="hide">
     <p>I'm red</p>
+</div>
 </div>
 
 </div>
@@ -274,6 +275,9 @@
 
 
 </div>
+
+<!-- jQuery through CDN, currently using 1.8.3 -->
+<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
 <script> 
 
