--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 </div>
 
 <div class="row">
-<div id="g1-box" class="hide">
+<div id="g1-box" class="">
     <p>I'm yellow</p>
 </div>
-<div id="g2-box" class="hide">
+<div id="g2-box" class="">
     <p>I'm red</p>
 </div>
 </div>
