Added the feature for one of the boxes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <div class="row">
   <div id="g1-trigger" class="col-xs-12 col-md-3">
-    <a href="#" class="thumbnail">
+    <a href="" class="thumbnail">
       <img src="images/hackLogo.jpg" alt="...">
           </a>
         <div class="caption">
@@ -145,7 +145,7 @@
            </div>
   </div>
 <div id="g2-trigger" class="col-xs-12 col-md-3">
-    <a href="#" class="thumbnail">
+    <a href="" class="thumbnail">
       <img src="images/vgdc.jpg" alt="...">
           </a>
         <div class="caption">
@@ -180,16 +180,31 @@
   </div>
 </div>
 
+</div>
+
 <div class="row">
 <div id="g1-box" class="">
-    <p>I'm yellow</p>
+   <div class="well well-sm"> 
+
+  <div class="row">
+    <div id="project1" class="col-xs-12 col-md-12">
+      <a href="" class="thumbnail">
+       <img src="images/hackLogo.jpg" alt="...">
+           </a>
+         <div class="caption">
+           <h3>Project: Blood</h3>
+           <p> <p>BLOOD IS FUN.</p> </p>
+             </div>
+  </div>
 </div>
-<div id="g2-box" class="">
-    <p>I'm red</p>
+</div> 
+</div>
+<div id="g2-box" class="hide">
+    <p>FOOD FIGHT!</p>
 </div>
 </div>
 
-</div>
+
 
  <div class="well well-sm"> 
 
