Edited links and tried to fix script

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <div class="row">
   <div id="g1-trigger" class="col-xs-12 col-md-3">
-    <a href="" class="thumbnail">
+    <a href="#g1-box" class="thumbnail">
       <img src="images/hackLogo.jpg" alt="...">
           </a>
         <div class="caption">
@@ -145,7 +145,7 @@
            </div>
   </div>
 <div id="g2-trigger" class="col-xs-12 col-md-3">
-    <a href="" class="thumbnail">
+    <a href="#g2-box" class="thumbnail">
       <img src="images/vgdc.jpg" alt="...">
           </a>
         <div class="caption">
@@ -183,7 +183,7 @@
 </div>
 
 <div class="row">
-<div id="g1-box" class="">
+<div id="g1-box" class="hide">
    <div class="well well-sm"> 
 
   <div class="row">
@@ -199,7 +199,8 @@
 </div>
 </div> 
 </div>
-<div id="g2-box">
+
+<div id="g2-box" class="hide">
     <p>FOOD FIGHT!</p>
 </div>
 </div>
