Attempting more fix

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
 <body>
 
+<!-- jQuery through CDN, currently using 1.8.3 -->
+<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
+
+
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -180,10 +184,8 @@
   </div>
 </div>
 
-</div>
-
 <div class="row">
-<div id="g1-box" class="hide">
+<div id="g1-box" class="">
    <div class="well well-sm"> 
 
   <div class="row">
@@ -200,10 +202,15 @@
 </div> 
 </div>
 
-<div id="g2-box" class="hide">
+<div id="g2-box" class="">
     <p>FOOD FIGHT!</p>
 </div>
 </div>
+
+
+</div>
+
+
 
 
 
