Updated index with changes (check desc)
- Made title bar adhere to 85% of page
- deleted misc content on the page
- rearranged the title bar
- switched the ref# for the hrefs to the bogus containers and not the
headers themselves to actually see the content

--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top constrain80" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
        <ul class="nav navbar-nav">
        <li><a class="navbar-brand" href="#">
         <img class="hidden" alt="Brand" src="images/omu.jpg"></a></li>
         <li><a class="navSpec" href="#">About</a></li>
-        <li><a class="navSpec" href="#resume">Resume</a></li>
-        <li><a class="navSpec" href="http://medium.com/@jasonchiu">Blog</a></li>
         <li><a class="navSpec" href="#gameproj">Game Projects</a></li>
         <li><a class="navSpec" href="#otherproj">Other Projects</a></li>
+        <li><a class="navSpec" href="#resume">Resume</a></li>
+        <li><a class="navSpec" href="http://medium.com/@jasonchiu">Blog</a></li>
+        
       </ul>
     </div>
   </div>
@@ -52,88 +53,26 @@
 
 <div class="jumbotron center90"><br>
 
-  <div class="row">
-
+  <div class="row"> <!-- Intro  row! -->
     <div class="col-xs-12 col-md-4"> <!-- Image Div -->
       <img src="images/jaydom.jpg" alt="..." class="img-circle center-block" id="elementSmall">
     </div>
     <div class="col-xs-12 col-md-8"> <!-- Info Div -->
      <h1 id="centerSmall">I'm Jason!</h1>
-        <p id="centerSmall">I major in <i>Computer Game Science</i>, specializing in software development!<br>
-        I'm currently in my 3rd year at the University of California, Irvine.<br><br>
-        My passions? <br><br> Game development. Hackathons. Bettering myself and others.<br><br>
-        <b><u>I like to make things happen.</u></b><br> I like to enable others to realize that they can, too. <br><br>
-        In my spare time, I enjoy climbing the ladder in League of Legends, Hearthstone arena runs, piano improvisation, and chugging down large quantities of iced coffee.<br></p>
+      <p id="centerSmall">
+        Passionate developer. Serious gamer. <br>
+        Check out what I have below.
+      </p>
     </div> 
    </div>
    
 
 
-<!-- 
 
-    <div class="col-xs-12 col-md-6">
-      <a href="#" class="thumbnail"><img src="images/walker.jpg" alt="...">
-      </a>
-     <div class="list-group">
-
-         <h3>I'm working on.. <span class="badge">4</span></h3>
-
-      <a href="#" class="list-group-item ">
-        <h4 class="list-group-item-heading">This Website!</h4>
-        <p class="list-group-item-text">
-          Replaced old text-site with beautiful images and projects just for you. 
-
-
-        </p>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" 
-          aria-valuemax="100" style="width: 30%;">
-            30%</div>
-        </div>
-      </a>
-
-
-      <a href="#" class="list-group-item">
-        <h4 class="list-group-item-heading">Project: Blood</h4>
-        <p class="list-group-item-text">A 2D top-down grid-based medival game with rogue-like elements.</p>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" 
-          aria-valuemax="100" style="width: 60%;">
-            60%</div>
-        </div>
-      </a>
-
-      <a href="#" class="list-group-item">
-        <h4 class="list-group-item-heading">Project: FoodRun</h4>
-        <p class="list-group-item-text">A 2D top-down 2 player food fight game. Toss food at each other!</p>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" 
-          aria-valuemax="100" style="width: 30%;">
-            30%</div>
-        </div>
-      </a>
-
-      <a href="#" class="list-group-item ">
-        <h4 class="list-group-item-heading">Project: PainBuddy</h4>
-        <p class="list-group-item-text">A survey designed as a game application and developed for patients at the Children's Hospital, Orange County.
-        </p>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" 
-          aria-valuemax="100" style="width: 70%;">
-            70%</div>
-        </div>
-      </a>
-
-    </div> 
-  </div>
+<div id="gameproj" class="bogus"> <!-- using this to push down the page -->
 </div>
 
--->
-
-<div class="bogus"> <!-- using this to push down the page -->
-</div>
-
- <h1 id="gameproj">Game Projects</h1>
+ <h1>Game Projects</h1>
  <h2>Click each image to see more and download the game.</h2>
 
  <div class="well well-sm"> 
@@ -243,10 +182,10 @@
 
 
 
-<div class="bogus"> <!-- using this to push down the page -->
+<div  id="otherproj" class="bogus"> <!-- using this to push down the page -->
 </div>
 
- <h1 id="otherproj">Other Projects, Work Experience</h1>
+ <h1>Other Projects, Work Experience</h1>
  <h2>Click each image to learn more.</h2>
 
 <div class="well well-sm"> 
