--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
 <!-- jQuery through CDN, currently using 1.8.3 -->
 <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
-
-  <nav class="navbar navbar-inverse navbar-fixed-top center90" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-       <ul class="nav navbar-nav ">
+       <ul class="nav navbar-nav center90">
        <li><a class="navbar-brand" href="#">
         <img class="hidden" alt="Brand" src="images/omu.jpg"></a></li>
         <li><a class="navSpec" href="#">About</a></li>
@@ -50,8 +49,7 @@
   </div>
 </nav>
 
-
-<div class="jumbotron"><br>
+<div class="jumbotron"> <br>
 
   <div class="row"> <!-- Intro  row! -->
     <div class="col-xs-12 col-md-4"> <!-- Image Div -->
@@ -66,14 +64,10 @@
     </div> 
    </div>
    
-
-
-
 <div id="gameproj" class="bogus"> <!-- using this to push down the page -->
 </div>
 
  <h1>Game Projects</h1>
-
  <div class="well well-sm"> 
 
 <div class="row">
@@ -120,6 +114,7 @@
         </div>
 
   </div>
+</div>
 </div>
 
 <div id="gameproj2" class="bogus"> <!-- using this to push down the page -->
@@ -211,10 +206,6 @@
 </div>
 
 <!-- jQuery through CDN, currently using 1.8.3 -->
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
-<script> 
-
-</script>
 </body>
 
