--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
-    <div class="navbar-header">
-       <ul class="nav navbar-nav center90">
+    <div class="navbar-header center90">
+       <ul class="nav navbar-nav">
        <li><a class="navbar-brand" href="#">
         <img class="hidden" alt="Brand" src="images/omu.jpg"></a></li>
         <li><a class="navSpec" href="#">About</a></li>
