Updated version of Jquery from 1.8 -> 1.11

--- a/index.html
+++ b/index.html
@@ -27,10 +27,32 @@
 <!-- -->
 </head>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<script>
+  $(document).ready(function(){
+  $("gameProj1").click(function(){
+    $("#game1").fadeIn();
+    $("#game1").fadeIn("slow");
+    $("#game1").fadeIn(3000);
+    $("#game2").fadeOut();
+  });
+  $("gameProj2").click(function(){
+    $("#game2").fadeIn();
+    $("#game2").fadeIn("slow");
+    $("#game2").fadeIn(3000);
+    $("#game1").fadeOut();
+  });
+});
+
+
+
+</script>
+
 <body>
 
 <!-- jQuery through CDN, currently using 1.8.3 -->
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
+
 
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
@@ -221,28 +243,6 @@
 
 
 </div>
-
-<!-- jQuery through CDN, currently using 1.8.3 -->
-
-<script>
-  $(document).ready(function(){
-  $("gameProj1").click(function(){
-    $("#game1").fadeIn();
-    $("#game1").fadeIn("slow");
-    $("#game1").fadeIn(3000);
-    $("#game2").fadeOut();
-  });
-  $("gameProj2").click(function(){
-    $("#game2").fadeIn();
-    $("#game2").fadeIn("slow");
-    $("#game2").fadeIn(3000);
-    $("#game1").fadeOut();
-  });
-});
-
-
-
-</script>
 
 </body>
 
