messed up on the css. fixed.

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
   </div>
 </div>
 
-<div id="game1" class="row descBox" style="display:none">
+<div id="game1" class="row descBox" style= "display:none; background-color:red;">
  <h3>THIS IS PROJECT BLOOD</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness </p>
 
 </div>
 
-<div id="game2" class="row descBox" style="display:none">
+<div id="game2" class="row descBox" style= "display:none; background-color:blue;">
  <h3>THIS IS PROJECT food run</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness </p>
