Removing the display none

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </div>
 </div>
 
-<div id="game1" class="row descBox" style= "display:none; background-color:red;">
+<div id="game1" class="row descBox"> <!-- style= "display:none; background-color:red;" -->
  <h3>THIS IS PROJECT BLOOD</h3>
 
  <p> and this is a placeholder for more content, imags, and happiness </p>
