Added hashtags. Maybe?

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
   $(document).ready(function(){
-  $("gameProj1").click(function(){
+  $("#gameProj1").click(function(){
     $("#game1").fadeIn();
     $("#game1").fadeIn("slow");
     $("#game1").fadeIn(3000);
     $("#game2").fadeOut();
   });
-  $("gameProj2").click(function(){
+  $("#gameProj2").click(function(){
     $("#game2").fadeIn();
     $("#game2").fadeIn("slow");
     $("#game2").fadeIn(3000);
